fixed image size to prevent sidebar jump

--- a/css/base.scss
+++ b/css/base.scss
@@ -61,6 +61,8 @@ a, button {
 }
 
 #carbonads .carbon-img img {
+    width: 130px;
+    height: 100px;
     margin: 0 0 10px 0;
     border: 0;
     box-shadow: none;
